plugins {
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'

}

//group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'javafiles'
    mainClass = 'javafiles.gui.DealershipApp'
}

kotlin {
    jvmToolchain(23)
}

javafx {
    version = '24'
    modules = ['javafx.controls', 'javafx.fxml']
}

sourceSets {
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }

}

dependencies {
    implementation("com.googlecode.json-simple:json-simple:1.1.1") {
        exclude group: 'junit'
    }

//    implementation("org.openjfx:javafx-base:24")
//    implementation("org.openjfx:javafx-controls:24")
//    implementation("org.openjfx:javafx-fxml:24")
//    implementation("org.openjfx:javafx-graphics:24")
//    implementation("org.openjfx:javafx-swing:24")
//    implementation("org.openjfx:javafx:24")

    implementation("org.controlsfx:controlsfx:11.2.2")

    implementation("org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0")

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
//    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'DealerProject'
    }
}

jlinkZip {
    group = 'distribution'
}